completed gui for now, started adding number system

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
         "typeinfo": "cpp",
         "variant": "cpp",
         "queue": "cpp",
-        "cstdarg": "cpp"
+        "cstdarg": "cpp",
+        "sstream": "cpp"
     }
 }
